--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.11.2",
+    "@tanstack/react-query": "^5.36.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
