--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.11.2",
+    "@langchain/community": "^0.2.0",
+    "@langchain/google-genai": "^0.0.14",
+    "@langchain/pinecone": "^0.0.6",
+    "@pinecone-database/pinecone": "^2.2.1",
     "@tanstack/react-query": "^5.36.2",
+    "cloudinary": "^2.2.0",
     "next": "14.2.3",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
     "@types/node": "^20",
